--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,23 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
-    background-color: #0581ca;
+    background-image: linear-gradient(to right, rgb(202, 202, 202), #490196);
     justify-content: center;
     align-items: center;
     display: flex;
-    min-height: 100vs;
+    min-height: 100vh;
 }
 .caixa {
-    background-color: white;
+    background-color: rgb(241, 241, 241);
     padding-top: 30px;
     padding: 30px;
+    border-radius: 6px;
 }
 .caixa h2 {
     margin-bottom: 40px;
     text-align: center;
     font-size: 26px;
-    color: #014a96;
+    color: #490196;
     font-family: sans-serif;
 }
 input {
@@ -30,7 +31,7 @@ input {
     height: 50px;
     width: 400px;
     border-radius: 6px;
-    border: 2px solid rgb(20, 139, 250);
+    border: 2px solid #490196;
     outline: none;
     font-size: 26px;
 }
@@ -41,13 +42,13 @@ input::placeholder {
     font-family: sans-serif;
     font-size: 15px;
     margin-top: 40px;
-    border: 2px solid rgb(20, 139, 250);
+    border: 2px solid #490196;
     width: 155px;
     height: 50px;
     text-align: center;
-    background-color: #0c81ee;
+    background-color: #490196;
     display: flex;
-    color: white;
+    color: rgb(241, 241, 241);
     justify-content: center;
     align-items: center;
     cursor: pointer;
@@ -57,7 +58,7 @@ input::placeholder {
     margin-left: 85px;
 }
 #button:hover {
-    color: white;
+    color: rgb(241, 241, 241);
     background-color: black;
 }
 
